--- a/TP2_fischmaa_geoffrog/src/Makefile
+++ b/TP2_fischmaa_geoffrog/src/Makefile
@@ -1,7 +1,7 @@
 CXX = g++
 CXXFLAGS = -Wall -g
-TARGET = simpleConstructor copyConstructor fileConstructor size fill operator
-SOURCES = testOperator.cpp testSimpleConstructor.cpp testCopyConstructor.cpp testFileConstructor.cpp testSize.cpp testFill.cpp Dvector.cpp 
+TARGET = simpleConstructor copyConstructor fileConstructor size fill operator resize chevron comparaisonegal
+SOURCES = testComparaisonEgal.cpp testresize.cpp testChevron.cpp testOperator.cpp testSimpleConstructor.cpp testCopyConstructor.cpp testFileConstructor.cpp testSize.cpp testFill.cpp Dvector.cpp 
 OBJETS = $(SOURCES:.cpp=.o)
 
 all: $(TARGET)
@@ -23,7 +23,16 @@ fill: Dvector.o testFill.o
 
 operator: Dvector.o testOperator.o
 	$(CXX) $(CXXFLAGS) -o $@ Dvector.o testOperator.o
+	
+resize: Dvector.o testresize.o
+	$(CXX) $(CXXFLAGS) -o $@ Dvector.o testresize.o	
 
+chevron: Dvector.o testChevron.o
+	$(CXX) $(CXXFLAGS) -o $@ Dvector.o testChevron.o
+	
+comparaisonegal: Dvector.o testComparaisonEgal.o
+	$(CXX) $(CXXFLAGS) -o $@ Dvector.o testComparaisonEgal.o	
+	
 check: $(TARGET)
 	./simpleConstructor && ./copyConstructor && ./fileConstructor && ./size && ./fill
 
